--- a/Airbus/templates/homepage.html
+++ b/Airbus/templates/homepage.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>{{title}}</title>
 </head>
 <body>
-$END$
+        <h1> this is home page </h1><br>
+        <h1>NEWS bla bla</h1>
+        <h1> login/ sign buttons</h1>
 </body>
 </html>
